# schneider-electric

./: pyproject.toml
.claude/agents/: vscode-ext-architect.md
ai-unit-test-generator/: .gitignore  .vscodeignore  COVERAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP.md  README.md  package-lock.json  package.json  tsconfig.json
ai-unit-test-generator/.github/workflows/: coverage.yml
ai-unit-test-generator/docs/: MIGRATION.md  USER_GUIDE.md
ai-unit-test-generator/media/: sidebar.css
ai-unit-test-generator/python/: .coveragerc  .env.example  extract_functions.py  generate_scenarios.py  generate_unit_tests.py  pyproject.toml  pytest.ini  requirements.txt
ai-unit-test-generator/python/tests/: test_extract_functions.py
ai-unit-test-generator/src/: extension.ts  types.ts
ai-unit-test-generator/src/__mocks__/: vscode.ts
ai-unit-test-generator/src/pipeline/: Pipeline.ts
ai-unit-test-generator/src/providers/: FileTreeProvider.ts  FunctionTreeProvider.ts  HelpProvider.ts  SetupWizardProvider.ts  SidebarProvider.ts  TestPreviewProvider.ts
ai-unit-testing-multiLang/: .gitignore  README.md  coverage_analyzer.py  extract_functions.py  generate_scenarios.py  generate_unit_tests.py  language_detector.py  language_test_generators.py  package.json  pipeline.py  sample.py  test_generated.py  universal_extractor.py
src/: .env  sample.py
src/tests/: test-extract-functions.py  test-generate-scenarios.py  test-generate-unit-tests.py
src/utils/: extract_functions.py  extractor_changes.ipynb  generate_scenarios.py  generate_unit_tests.py
(+14 files in other folders)
